# cppgen

./: README.md
examples/example_project/: CMakeLists.txt  README.md
examples/example_project/app/: main.cpp
examples/example_project/include/example_project/: api.hpp  example.hpp  public.hpp
examples/example_project/lib/example/: CMakeLists.txt
examples/example_project/lib/example/include/example/: example.hpp
examples/example_project/lib/example/src/: example.cpp
examples/example_project/libs/example/: CMakeLists.txt
examples/example_project/src/: api.cpp  example.cpp  private.cpp  private_with_tests.cpp  public.cpp
examples/example_project/src/headers/: api.hpp  private.hpp  private_with_tests.hpp
examples/example_project/tests/: main.cpp  private_with_tests.cpp
